invalidate cloudfront index.html after build

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -27,4 +27,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
+      # sync the built files to our s3 bucket
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+
+      # invalidate the index.html file - .js files are autimatically invalidated because the hash
+      # appended to the filename will be updated by webpack as per our config
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
